@@ -997,6 +997,16 @@ literal|"/file5"
 argument_list|)
 expr_stmt|;
 comment|// SetAclOp -> MetadataUpdateEvent
+name|client
+operator|.
+name|rename
+argument_list|(
+literal|"/file5"
+argument_list|,
+literal|"/dir"
+argument_list|)
+expr_stmt|;
+comment|// RenameOldOp -> RenameEvent
 name|EventBatch
 name|batch
 init|=
@@ -3292,6 +3302,119 @@ name|getAcls
 argument_list|()
 operator|==
 literal|null
+argument_list|)
+expr_stmt|;
+comment|// RenameOp (2)
+name|batch
+operator|=
+name|waitForNextEvents
+argument_list|(
+name|eis
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|batch
+operator|.
+name|getEvents
+argument_list|()
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|txid
+operator|=
+name|checkTxid
+argument_list|(
+name|batch
+argument_list|,
+name|txid
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|batch
+operator|.
+name|getEvents
+argument_list|()
+index|[
+literal|0
+index|]
+operator|.
+name|getEventType
+argument_list|()
+operator|==
+name|Event
+operator|.
+name|EventType
+operator|.
+name|RENAME
+argument_list|)
+expr_stmt|;
+name|Event
+operator|.
+name|RenameEvent
+name|re3
+init|=
+operator|(
+name|Event
+operator|.
+name|RenameEvent
+operator|)
+name|batch
+operator|.
+name|getEvents
+argument_list|()
+index|[
+literal|0
+index|]
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|re3
+operator|.
+name|getDstPath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"/dir/file5"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|re3
+operator|.
+name|getSrcPath
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+literal|"/file5"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|re
+operator|.
+name|getTimestamp
+argument_list|()
+operator|>
+literal|0
 argument_list|)
 expr_stmt|;
 comment|// Returns null when there are no further events
